tests/cases/pass/try_catch_throw.cs
class Program {
    static void Main() {
        try {
            throw "boom";
        } catch (string e) {
            Console.WriteLine("capturado: " + e);
        }
    }
}
